--- a/web.config
+++ b/web.config
@@ -23,5 +23,13 @@
                 </rule>
             </rules>
         </rewrite>
+		<httpProtocol>
+        <customHeaders>
+          <add name="Access-Control-Allow-Origin" value="*" />
+          <add name="Access-Control-Allow-Headers" value="Content-Type" />
+          <add name="Access-Control-Allow-Methods" value="GET,POST,PUT,DELETE,OPTIONS" />
+         <add name="Access-Control-Allow-Credentials" value="true" />
+        </customHeaders>
+      </httpProtocol>
     </system.webServer>
 </configuration>
